zyg/grafana/grafana-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: grafana
    component: core
  name: grafana
  namespace: default 
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
        component: core
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10555
        fsGroup: 10555
      containers:
        - name: grafana
          image: grafana/grafana:master 
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              path: /login
              port: 3000
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: storage-volume 
          ports:
            - containerPort: 3000
              protocol: TCP
      volumes:
        - name: storage-volume
          persistentVolumeClaim:
            claimName: zyg-prometheus-server
