zyg/grafana/grafana-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: grafana
   namespace: default 
spec:
   rules:
   - host: www.grafana.com 
     http:
       paths:
       - path: /
         backend:
          serviceName: grafana
          servicePort: 3000
